fixed white space on right margin

--- a/assets/sass/_content.scss
+++ b/assets/sass/_content.scss
@@ -128,7 +128,6 @@
       }
 
       .music-cover {
-        background-size: cover;
         background-color: rgba(0,0,0,.6);
         width: 225px;
         height: 225px;
