--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -188,3 +188,37 @@ footer {
     }
   }
 }
+@media screen and (max-width: $mobileMaxWidth) {
+  footer {
+    height: 800px;
+
+    .link-wrapper {
+      display: grid;
+      grid-template-columns: 100%;
+      width: 200px;
+
+      .social-icons {
+        display: none;
+      }
+
+      .link-cols {
+        width: 300px;
+
+        ul {
+          margin-right: 10px;
+        }
+      }
+    }
+
+    .copyright-wrapper {
+      margin-top: 460px;
+      margin-left: 20px;
+      font-size: 0.5rem;
+      grid-template-columns: 70% 30%;
+
+      .australia {
+        box-sizing: border-box;
+      }
+    }
+  }
+}
